<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/color_main">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/color_dark">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_feedback_add_restaurant_title"
                    android:gravity="center"
                    android:textSize="16sp"/>
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info_feedback_add_restaurant_add"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/addRestaurant"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/color_dark"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_feedback_title"
                    android:gravity="center"
                    android:textSize="16sp"/>
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info_feedback_write"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/writeFeedback"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/color_dark"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_rate_title"
                    android:gravity="center"
                    android:textSize="16sp"/>
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info_invite"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/inviteFriends"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:background="@color/color_dark"
                android:layout_marginTop="10dp"
                android:padding="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/googleplay"
                    android:layout_gravity="center"/>
                <Button
                    android:text="@string/info_rate"
                    android:id="@+id/rate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:text="@string/info_rate_more"
                    android:id="@+id/more"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/info_link_privacy"
                android:textColor="@color/color_link"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/adminContent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_restaurant_requests"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/restaurantRequestContainer"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_feedbacks"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/feedbackContainer"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>