<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    android:clickable="true">
    <include layout="@layout/menu_back"
        android:id="@+id/menu_back"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_restaurant_ready"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menu_back"
        android:layout_above="@+id/submitButton">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_restaurant_title"
                android:padding="10dp"
                android:textSize="16sp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_restaurant">
                    <EditText
                        android:id="@+id/nameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:maxLength="100"
                        android:hint="@string/name"
                        android:textColorHint="@color/color_text_hint"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_restaurant"
                android:gravity="center"
                android:layout_margin="10dp"
                android:id="@+id/addressContainer">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/marker_icon"
                        android:padding="10dp"
                        android:alpha="0.7" />
                    <AutoCompleteTextView
                        android:id="@+id/cityText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:popupBackground="@color/color_main"
                        android:maxLength="100"
                        android:imeOptions="actionNext"
                        android:hint="@string/city"
                        android:textColor="@color/color_text_light"
                        android:textColorHint="@color/color_text_hint"
                        app:backgroundTint="@color/color_text_light"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/addressText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:maxLength="100"
                        android:hint="@string/address"
                        android:textColorHint="@color/color_text_hint"/>
                    <EditText
                        android:id="@+id/postalCodeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="100"
                        android:hint="@string/postal_code"
                        android:textColorHint="@color/color_text_hint"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="15dp">
                <TextView
                    android:text="@string/edit_restaurant_lunch_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/clock_icon"
                        android:padding="10dp"
                        android:tint="@color/color_text_light"
                        android:alpha="0.7"/>
                    <TextView
                        android:id="@+id/startTimeText"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:text="@string/edit_restaurant_start"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:background="@color/color_restaurant"
                        android:textColorHint="@color/color_text_hint"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:textColorHint="@color/color_text_hint"/>
                    <TextView
                        android:id="@+id/endTimeText"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/edit_restaurant_end"
                        android:textSize="16sp"
                        android:background="@color/color_restaurant"
                        android:textColorHint="@color/color_text_hint"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/priceContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp">
                <TextView
                    android:text="@string/edit_restaurant_menu_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_restaurant"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/internet_icon"
                        android:padding="10dp"
                        android:alpha="0.7" />
                    <EditText
                        android:id="@+id/webText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:inputType="textUri"
                        android:hint="@string/edit_restaurant_menu_web"
                        android:textColorHint="@color/color_text_hint"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>