<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/color_dark">
        <AutoCompleteTextView
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:popupBackground="@color/color_dark"
            android:maxLength="100"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:completionThreshold="1"
            android:hint="@string/map_search_hint"
            android:textColor="@color/color_text_light"
            android:textColorHint="@color/color_text_hint"
            app:backgroundTint="@color/color_text_light"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:layout_height="40dp"
            android:id="@+id/visibleRestaurantsButton"
            android:text="@string/restaurants_on_map"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:layout_height="40dp"
            android:id="@+id/closeRestaurantsButton"
            android:text="@string/restaurants_show_close"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/restaurant_list"
        android:divider="@null"/>
</LinearLayout>